objects/CSS_SRT__c.object
<CustomObject>
    <fields>
        <fullName>Access_Code_A__c</fullName>
        <label>Access Code A</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Access_Code_B__c</fullName>
        <label>Access Code B</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Access_Code_C__c</fullName>
        <label>Access Code C</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Access_Code_D__c</fullName>
        <label>Access Code D</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Access_Code_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access Code Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_Code_R__c</fullName>
        <label>Access Code R</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Access_Code_S1__c</fullName>
        <label>Access Code S1</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Access_Code_S2__c</fullName>
        <label>Access Code S2</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Access_Code_S3__c</fullName>
        <label>Access Code S3</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Access_Code_Saved__c</fullName>
        <formula>IF((Access_Code__c &lt;&gt; &quot;&quot;  ||  Access_Code__c  &lt;&gt; null)  , Access_Code__c,  Job_Engine_Access_Code__c)</formula>
        <label>Access Code Saved</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Code__c</fullName>
        <label>Access Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccordionType__c</fullName>
        <label>AccordionType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountCode_Formula__c</fullName>
        <formula>IF((Account_Code__c &lt;&gt; &quot;&quot; &amp;&amp; Account_Code__c &lt;&gt; null) , Account_Code__c, Account_Code_Description__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountCode Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Code_Description__c</fullName>
        <label>Account Code Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Code__c</fullName>
        <label>Account Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Hour__c</fullName>
        <label>Actual Hour</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_SRT_Calculated__c</fullName>
        <formula>(IF((CONTAINS(SRT_Category__c,&apos;AdditionalDiag&apos;) || CONTAINS(SRT_Category__c,&apos;AdditionalRep&apos;) || CONTAINS(SRT_Category__c,&apos;Campaign&apos;) || CONTAINS(SRT_Category__c,&apos;TRP&apos;) || CONTAINS(SRT_Category__c,&apos;ATC&apos;) &amp;&amp; (Solution_Number__c == null) ),IF(Flex_Flag__c==true,SRT_Time__c,CASE(Access_Code_Saved__c, &apos;A&apos;,  Access_Code_A__c , &apos;B&apos;,  Access_Code_B__c , &apos;C&apos;,  Access_Code_C__c, &apos;D&apos;,  Access_Code_D__c, &apos;R&apos;,  Access_Code_R__c, Access_Code_B__c)),
SRT_Time__c
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional_SRT_Calculated</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjusted_Overlap_Hours__c</fullName>
        <label>Adjusted Overlap Hours</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjustment_Reason__c</fullName>
        <label>Adjustment Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Justified Per Failure Code</fullName>
                </value>
                <value>
                    <fullName>Partial Re-Assembly</fullName>
                </value>
                <value>
                    <fullName>Penalty</fullName>
                </value>
                <value>
                    <fullName>Travel SRT’s Incorrectly Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admi_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added for the story#172625</description>
        <inlineHelpText>Admin SRT Check</inlineHelpText>
        <label>Admi Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admin_Arrive_Job__c</fullName>
        <label>Admin Arrive Job</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Admin_Arrive_Shop__c</fullName>
        <label>Admin Arrive Shop</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Admin_Finish_Job__c</fullName>
        <label>Admin Finish Job</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Admin_Leave_Job__c</fullName>
        <label>Admin Leave Job</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Admin_Left_Shop__c</fullName>
        <label>Admin Left Shop</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Admin_Miles_In__c</fullName>
        <label>Admin Miles In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Admin_Miles_Out__c</fullName>
        <label>Admin Miles Out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Admin_Start_Job__c</fullName>
        <label>Admin Start Job</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assignment__c</fullName>
        <label>Assignment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bill__c</fullName>
        <label>Bill</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billed_Hour__c</fullName>
        <label>Billed Hour</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_AssignmentOrder__c</fullName>
        <formula>CASE( Assignment__c , &apos;PRIMARY&apos;, 1, &apos;ALTERNATIVE&apos;, 2,&apos;PROGRESSIVE DAMAGE&apos;,3,4)</formula>
        <label>CSS_AssignmentOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_Claims__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSS Claims</label>
        <referenceTo>CSS_Claims__c</referenceTo>
        <relationshipLabel>CSS SRTS</relationshipLabel>
        <relationshipName>CSS_SRTS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSS_Root_Cause_Failure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSS Root Cause Failure</label>
        <referenceTo>CSS_Solution_Component__c</referenceTo>
        <relationshipLabel>CSS SRTS (CSS Root Cause Failure)</relationshipLabel>
        <relationshipName>CSS_SRTS2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSS_UniqueSRTValues__c</fullName>
        <externalId>true</externalId>
        <label>Unique SRT Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_nonSRTRow__c</fullName>
        <label>CSS_nonSRTRow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Claimed_Hours__c</fullName>
        <description>To calculate Extended Hours in SRTs(JobPlan/Claims)</description>
        <formula>IF (Override__c &amp;&amp;  ISPICKVAL(Type__c, &apos;Overlap&apos;), Adjusted_Overlap_Hours__c, 
Overlap_Hours__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Claimed Hours</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseName__c</fullName>
        <formula>Solution_Number__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Date__c</fullName>
        <label>Change Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_User__c</fullName>
        <label>Change User</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Type__c</fullName>
        <label>Claim Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claimed_Hours__c</fullName>
        <label>Claimed Hours</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Component_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Component ID for this Repair</description>
        <label>CSS Solution Component</label>
        <referenceTo>CSS_Solution_Component__c</referenceTo>
        <relationshipLabel>CSS SRTS</relationshipLabel>
        <relationshipName>CSS_SRTS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <label>Component Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Date__c</fullName>
        <label>Create Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_User__c</fullName>
        <label>Create User</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diag_Access_Time__c</fullName>
        <formula>(IF(ISPICKVAL(Type__c,&apos;Diag Access&apos;),IF(Flex_Flag__c==true,SRT_Time__c,IF(
ISBLANK(TEXT(Access_Code_A__c)) &amp;&amp; ISBLANK(TEXT(Access_Code_B__c)) &amp;&amp; ISBLANK(TEXT(Access_Code_C__c)) &amp;&amp; ISBLANK(TEXT(Access_Code_D__c)) &amp;&amp; ISBLANK(TEXT(Access_Code_R__c))

, SRT_Time__c

, CASE(Access_Code_Saved__c, &apos;A&apos;,  Access_Code_A__c , &apos;B&apos;,  Access_Code_B__c , &apos;C&apos;,  Access_Code_C__c, &apos;D&apos;,  Access_Code_D__c, &apos;R&apos;,  Access_Code_R__c, SRT_Time__c)

))
,
SRT_Time__c))</formula>
        <label>Diag_Access_Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diagnosis_Time__c</fullName>
        <description>Calculates the Diagnosis SRT based on Access Codes</description>
        <formula>(IF(OR(ISPICKVAL(Type__c,&apos;Diagnosis&apos;)),IF(Flex_Flag__c==true,SRT_Time__c,CASE(Access_Code_Saved__c, &apos;A&apos;,  Access_Code_A__c , &apos;B&apos;,  Access_Code_B__c , &apos;C&apos;,  Access_Code_C__c, &apos;D&apos;,  Access_Code_D__c, &apos;R&apos;,  Access_Code_R__c, Access_Code_B__c))
,
SRT_Time__c
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diagnosis Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DuplicateSRTDetails__c</fullName>
        <label>DuplicateSRTDetails</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ECM_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ECM Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extended_Hours__c</fullName>
        <label>Extended Hours</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FailCode__c</fullName>
        <label>FailCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fail_Code_Description__c</fullName>
        <label>Fail Code Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_Name__c</fullName>
        <label>Failure Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Code_Name__c</fullName>
        <formula>Solution_Number__r.FaultCode__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fault Code Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldAction_Time__c</fullName>
        <formula>(IF(OR(ISPICKVAL(Type__c,&apos;Field Action&apos;)),
CASE(Access_Code_Saved__c, &apos;A&apos;,  Access_Code_A__c , &apos;B&apos;,  Access_Code_B__c , &apos;C&apos;,  Access_Code_C__c, &apos;D&apos;,  Access_Code_D__c, &apos;R&apos;,  Access_Code_R__c, Access_Code_B__c),
SRT_Time__c
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FieldAction_Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flex_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flex Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flexible_BMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flexible_BMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flexible__c</fullName>
        <label>Flexible</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_BMS__c</fullName>
        <label>Hours_BMS</label>
        <precision>8</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Info_Only_Claim__c</fullName>
        <defaultValue>false</defaultValue>
        <description>story # 155919</description>
        <label>Info_Only_Claim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDuplicateSRT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDuplicateSRT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPopUpSRT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPopUpSRT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Engine_Access_Code__c</fullName>
        <formula>IF( SRT_Access_Code__c==&apos;R&apos;,SRT_Access_Code__c,IF( ISBLANK(Job_Order__c) , CSS_Claims__r.AccessCode__c, Job_Order__r.AccessCode__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Engine Access Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Order</label>
        <referenceTo>CSS_Job_Order__c</referenceTo>
        <relationshipLabel>CSS SRTS</relationshipLabel>
        <relationshipName>CSS_SRTS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ODM_Status_Code__c</fullName>
        <label>ODM_Status_Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ODM_Status_Message__c</fullName>
        <label>ODM Status Message</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ODM_Status__c</fullName>
        <label>ODM Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YTBV</fullName>
                    <default>true</default>
                    <label>YTBV</label>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>WARN</fullName>
                </value>
                <value>
                    <fullName>PASSED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overlap_Hours__c</fullName>
        <label>Overlap Hours</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overlap_SRT_Number__c</fullName>
        <label>Overlap SRT Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overlap_SRT_Title__c</fullName>
        <label>Overlap SRT Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overlap_Step_Id__c</fullName>
        <label>Overlap Step Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overlap__c</fullName>
        <label>Overlap</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OverrideReason__c</fullName>
        <label>OverrideReason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Reason__c</fullName>
        <label>Override Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Select One</fullName>
                </value>
                <value>
                    <fullName>Duplicate tasks directed by Cummins Care</fullName>
                </value>
                <value>
                    <fullName>Duplicate tasks directed by Guided troubleshooting</fullName>
                </value>
                <value>
                    <fullName>Multiple failures determined in different sequence</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_BMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private_BMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Private_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Private_Work__c</fullName>
        <label>Private Work</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_ID__c</fullName>
        <label>Quote ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Regions__c</fullName>
        <label>Regions</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Repair_Access_Calculated__c</fullName>
        <formula>(
IF(ISPICKVAL(Type__c,&apos;Repair Access&apos;),IF(Flex_Flag__c==true,SRT_Time__c,IF(
ISBLANK(TEXT(Access_Code_A__c)) &amp;&amp; ISBLANK(TEXT(Access_Code_B__c)) &amp;&amp; ISBLANK(TEXT(Access_Code_C__c)) &amp;&amp; ISBLANK(TEXT(Access_Code_D__c)) &amp;&amp; ISBLANK(TEXT(Access_Code_R__c))
, SRT_Time__c
, CASE(Access_Code_Saved__c, &apos;A&apos;,  Access_Code_A__c , &apos;B&apos;,  Access_Code_B__c , &apos;C&apos;,  Access_Code_C__c, &apos;D&apos;,  Access_Code_D__c, &apos;R&apos;,  Access_Code_R__c, SRT_Time__c)
))
,
SRT_Time__c))</formula>
        <label>Repair_Access_Calculated</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repair_Time__c</fullName>
        <formula>(IF(OR(ISPICKVAL(Type__c,&apos;Repair&apos;)),IF(Flex_Flag__c==true,SRT_Time__c,CASE(Access_Code_Saved__c, &apos;A&apos;, Access_Code_A__c , &apos;B&apos;, Access_Code_B__c , &apos;C&apos;, Access_Code_C__c, &apos;D&apos;, Access_Code_D__c, &apos;R&apos;, Access_Code_R__c, Access_Code_B__c)),
SRT_Time__c
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Repair_Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Message__c</fullName>
        <label>Response Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>S1_Description__c</fullName>
        <label>S1 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S2_Description__c</fullName>
        <label>S2 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S3_Description__c</fullName>
        <label>S3 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRTAdmi_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for  admin SRT</description>
        <label>SRTAdmi Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SRT_Access_Code__c</fullName>
        <label>SRT Access Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRT_AccessiblityCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Accessiblity CheckBox Option from the SRT Table</description>
        <label>SRT AccessiblityCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SRT_Amount__c</fullName>
        <formula>IF(Job_Order__c != null, IF( (TEXT(Job_Order__r.Repair_Location__c) ==&apos;In Shop&apos;), Extended_Hours__c * VALUE(Job_Order__r.CSS_In_Shop_Labor_Rate__c), Extended_Hours__c * VALUE(Job_Order__r.CSS_Field_Service_Labor_Rate__c)), IF(CSS_Claims__c != null, IF( (TEXT(CSS_Claims__r.Repair_Location__c) ==&apos;In Shop&apos;), Extended_Hours__c * VALUE(CSS_Claims__r.SP_INSHOP_LABOR_RATE__c), Extended_Hours__c * VALUE(CSS_Claims__r.SP_FIELD_SERVICE_LABOR_RATE__c)), 0.0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SRT Amount</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SRT_Category__c</fullName>
        <label>SRT Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRT_Decimal_Time__c</fullName>
        <description>This field will convert the SRT_Time__c  field to decimal ex : 90 minutes as 1.5</description>
        <formula>IF( OR(ISNULL(SRT_Time__c),SRT_Time__c=0) , Diagnosis_Time__c / 60, SRT_Time__c / 60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SRT Decimal Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SRT_Details__c</fullName>
        <label>SRT Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRT_Estimate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SRT Estimate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SRT_Family__c</fullName>
        <label>SRT Family</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRT_From_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To know if the SRT in claim has been copied from Job or returned from SRT package in Claims</description>
        <label>SRT From Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SRT_Group_Desc__c</fullName>
        <description>Group Code and Description</description>
        <inlineHelpText>Group Code and Description</inlineHelpText>
        <label>SRT_Group_Desc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>00 - Complete Engine or Generator Set  / Troubleshooting</fullName>
                </value>
                <value>
                    <fullName>01 - Cylinder Block</fullName>
                </value>
                <value>
                    <fullName>02 - Cylinder Head</fullName>
                </value>
                <value>
                    <fullName>03 - Rocker Levers</fullName>
                </value>
                <value>
                    <fullName>04 - Cam Follower/Tappets</fullName>
                </value>
                <value>
                    <fullName>05 - Fuel Systems (Pumps)</fullName>
                </value>
                <value>
                    <fullName>06 - Injectors and Fuel Lines</fullName>
                </value>
                <value>
                    <fullName>07 - Lubricating Oil System</fullName>
                </value>
                <value>
                    <fullName>08 - Cooling System</fullName>
                </value>
                <value>
                    <fullName>09 - Drive Units</fullName>
                </value>
                <value>
                    <fullName>10 - Air Intake System</fullName>
                </value>
                <value>
                    <fullName>11 - Exhaust System</fullName>
                </value>
                <value>
                    <fullName>12 - Compressed Air System</fullName>
                </value>
                <value>
                    <fullName>13 - Electrical Equipment</fullName>
                </value>
                <value>
                    <fullName>14 - Engine or Generator Set Testing</fullName>
                </value>
                <value>
                    <fullName>15 - Instruments / Controls</fullName>
                </value>
                <value>
                    <fullName>16 - Mounting Adaptations</fullName>
                </value>
                <value>
                    <fullName>17 - Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>19 - Electronic Controls</fullName>
                </value>
                <value>
                    <fullName>20 - Vehicle Braking</fullName>
                </value>
                <value>
                    <fullName>21 - Main Generator</fullName>
                </value>
                <value>
                    <fullName>22 - Hardware (Plugs, Fasteners, Fittings)</fullName>
                </value>
                <value>
                    <fullName>99 - Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>CE - Troubleshoot Cense Fault Code</fullName>
                </value>
                <value>
                    <fullName>CN - Troubleshoot Centry Fault Code</fullName>
                </value>
                <value>
                    <fullName>CO - ICON System SRTs</fullName>
                </value>
                <value>
                    <fullName>CS - Combined SRT</fullName>
                </value>
                <value>
                    <fullName>CT - Troubleshoot iCelect Fault Code</fullName>
                </value>
                <value>
                    <fullName>DT - DTNA OEM SRT Equivalents</fullName>
                </value>
                <value>
                    <fullName>FC - Fault Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SRT_Hours_Percentage__c</fullName>
        <defaultValue>100</defaultValue>
        <label>SRT Hours Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SRT_ID__c</fullName>
        <label>SRT ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRT_Message__c</fullName>
        <label>SRT Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SRT_Notes__c</fullName>
        <label>SRT Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SRT_Order__c</fullName>
        <label>SRT_Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SRT_Quantity__c</fullName>
        <label>SRT Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SRT_Select__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SRT_Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SRT_Status_Message__c</fullName>
        <label>SRT Status Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SRT_Time_Formula__c</fullName>
        <formula>IF(Flex_Flag__c==true,SRT_Time__c,CASE(Access_Code_Saved__c, 
&apos;A&apos;, Access_Code_A__c , 
&apos;B&apos;, Access_Code_B__c , 
&apos;C&apos;, Access_Code_C__c, 
&apos;D&apos;, Access_Code_D__c, 
&apos;R&apos;, Access_Code_R__c, SRT_Time__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SRT Time Formula</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SRT_Time_Hr_Min__c</fullName>
        <formula>TEXT(FLOOR(SRT_Time__c / 60)) &amp;&apos; hr &apos;&amp; TEXT(MOD(SRT_Time__c ,60)) &amp;&apos; min&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SRT Time Hr Min</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRT_Time_String__c</fullName>
        <label>SRT Time String</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRT_Time__c</fullName>
        <label>SRT Time</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SRT_Title__c</fullName>
        <label>SRT Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRT_Type__c</fullName>
        <label>SRT Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRT_Usage__c</fullName>
        <label>SRT Usage</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRT_Warrantable_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SRT %Warrantable Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SRT_Warrantable__c</fullName>
        <label>SRT_%Warrantable</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Model_Name__c</fullName>
        <label>Service Model Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution Number</label>
        <referenceTo>CSS_Solutions__c</referenceTo>
        <relationshipLabel>CSS SRTS</relationshipLabel>
        <relationshipName>CSS_SRTS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solution_Title__c</fullName>
        <formula>Solution_Number__r.Solution_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solution Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Access_Code_Desc__c</fullName>
        <label>Special Access Code Desc</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Access_Code__c</fullName>
        <label>Special Access Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_BMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special_BMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Step_Description__c</fullName>
        <label>Step Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step_Id__c</fullName>
        <label>Step Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Symptom_Name__c</fullName>
        <formula>Solution_Number__r.Symptom__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Symptom Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Troubleshoot_BMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Troubleshoot_BMS</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>